6303 brevdata pluss diverse (#2248)
Siste refaktorering for https://jira.adeo.no/browse/MELOSYS-6303

Stort sett brevdata som har blitt endret, pluss noen diverse filer her
og der som jeg ikke tok meg bryet med å kategorisere seperat.